--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       border-radius:25px; box-shadow:0 0 80px rgba(0,255,255,0.6);
       border:4px solid rgba(0,255,255,0.7); z-index:9999; opacity:0;
       transition:all 1.8s cubic-bezier(0.25,0.8,0.25,1);
+      overflow-y:auto; max-height:95vh;
     }
     #card.show { transform:translate(-50%,-50%) scale(1); opacity:1; }
     #card h1 { font-size:42px; margin:0 0 20px;
@@ -26,16 +27,24 @@
                -webkit-background-clip:text; color:transparent; }
     #card p { font-size:20px; line-height:1.6; margin:15px 0; }
 
-    /* Nút quay lại */
+    /* NÚT SIÊU ĐẸP – CHẮC CHẮN THẤY NGAY */
     #backBtn {
-      margin-top:40px; padding:14px 36px; font-size:18px; cursor:pointer;
-      background:linear-gradient(45deg,#ff00ff,#00ffff); color:#000; font-weight:bold;
-      border:none; border-radius:50px; box-shadow:0 0 20px rgba(0,255,255,0.8);
-      transition:0.3s;
+      margin: 50px auto 20px;
+      padding: 16px 40px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      background: linear-gradient(45deg, #ff00ff, #00ffff);
+      color: #000;
+      border: none;
+      border-radius: 50px;
+      box-shadow: 0 0 30px rgba(0,255,255,0.9);
+      transition: all 0.3s;
+      display: block;
     }
-    #backBtn:hover { transform:scale(1.1); }
+    #backBtn:hover { transform: scale(1.15); box-shadow: 0 0 40px rgba(0,255,255,1); }
 
-    #youtubeSection { margin-top:50px; }
+    #youtubeSection { margin-top:40px; }
     #youtubeSection h2 { font-size:28px; margin:20px 0 10px; color:#ff79c6; }
     #ytInput { width:100%; padding:16px; font-size:18px; border:none; border-radius:12px;
                background:#222; color:#fff; margin:15px 0 20px; box-sizing:border-box; }
@@ -47,10 +56,10 @@
   <div id="info">Chạm hoặc bấm vào Trái Đất để mở thiệp bí mật!</div>
   <div id="flash"></div>
 
-  <!-- THIỆP + YOUTUBE + NÚT TRỞ LẠI -->
+  <!-- THIỆP ĐẸP + NÚT HIỆN RÕ -->
   <div id="card">
-    <h1>Chill & YouTube</h1>
-    <p>Chill cùng anh chút nha</p>
+    <h1>Chill Cùng Anh Nhé</h1>
+    <p>Chỉ cần dán link YouTube là xem mượt, không quảng cáo, có tiếng, fullscreen ngon lành luôn!</p>
 
     <div id="youtubeSection">
       <h2>YouTube Không Quảng Cáo</h2>
@@ -59,21 +68,21 @@
       <p class="note">Không quảng cáo • Có tiếng • Shorts & Live OK • Dùng mãi mãi</p>
     </div>
 
+    <!-- NÚT NÀY BẠN SẼ THẤY NGAY -->
     <button id="backBtn">Quay lại vũ trụ</button>
   </div>
 
+  <!-- THREE.JS + TOÀN BỘ 3D VŨ TRỤ + SAO BĂNG (giữ nguyên như cũ) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 
   <script>
-    // ============== THREE.JS SETUP ==============
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(60, innerWidth/innerHeight, 0.1, 12000);
     const renderer = new THREE.WebGLRenderer({antialias:true});
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
-
     const controls = new THREE.OrbitControls(camera, renderer.domElement);
     controls.enableDamping = true; controls.dampingFactor = 0.05; controls.enablePan = false;
     camera.position.set(0, 600, 1800);
@@ -83,18 +92,16 @@
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
 
-    // ============== TOÀN BỘ 3D VŨ TRỤ (giữ nguyên của bạn) ==============
+    // === TOÀN BỘ 3D (stars, nebula, sun, planets, moon, trails, sao băng) – giữ nguyên 100% ===
     const starGeo = new THREE.BufferGeometry();
-    const vertices = [];
-    for(let i=0;i<40000;i++) vertices.push(THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000));
+    const vertices = []; for(let i=0;i<40000;i++) vertices.push(THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000));
     starGeo.setAttribute('position', new THREE.Float32BufferAttribute(vertices,3));
     scene.add(new THREE.Points(starGeo, new THREE.PointsMaterial({color:0xffffff,size:1.6,sizeAttenuation:true,transparent:true,opacity:0.9})));
 
     const nebulaGroup = new THREE.Group(); scene.add(nebulaGroup);
     for(let l=0;l<3;l++){
       const size = 2500 + l*1000;
-      const mat = new THREE.ShaderMaterial({
-        uniforms:{time:{value:0},layer:{value:l}},
+      const mat = new THREE.ShaderMaterial({uniforms:{time:{value:0},layer:{value:l}},
         vertexShader:`varying vec3 vPos;void main(){vPos=position;gl_Position=projectionMatrix*modelViewMatrix*vec4(position,1.0);}`,
         fragmentShader:`uniform float time;uniform float layer;varying vec3 vPos;
           float hash(vec3 p){return fract(sin(dot(p,vec3(7,157,113)))*43758.5453);}
@@ -117,8 +124,7 @@
 
     const sun = new THREE.Mesh(new THREE.SphereGeometry(70,64,64), new THREE.MeshBasicMaterial({color:0xffee88}));
     sun.add(new THREE.Mesh(new THREE.SphereGeometry(110,32,32), new THREE.MeshBasicMaterial({color:0xffaa00,transparent:true,opacity:0.6})));
-    scene.add(sun);
-    sun.add(new THREE.PointLight(0xffffff,3,6000));
+    scene.add(sun); sun.add(new THREE.PointLight(0xffffff,3,6000));
 
     const planetData = [{name:"Mercury",r:12,dist:180,color:0xcccccc,period:4},{name:"Venus",r:18,dist:280,color:0xffe4b5,period:8},
       {name:"Earth",r:20,dist:400,color:0x2288ff,period:12},{name:"Mars",r:14,dist:550,color:0xff4444,period:18},
@@ -127,8 +133,7 @@
     const trails = [];
     planetData.forEach(p => {
       const planet = new THREE.Mesh(new THREE.SphereGeometry(p.r,32,32), new THREE.MeshStandardMaterial({color:p.color,emissive:p.color,emissiveIntensity:0.5}));
-      const orbit = new THREE.Object3D();
-      orbit.add(planet); planet.position.x = p.dist; scene.add(orbit);
+      const orbit = new THREE.Object3D(); orbit.add(planet); planet.position.x = p.dist; scene.add(orbit);
       if(p.name==="Earth") earthMesh = planet;
       if(p.name==="Saturn"){
         const ring = new THREE.Mesh(new THREE.TorusGeometry(p.r*1.7,p.r*0.4,16,120),
@@ -147,7 +152,6 @@
       }
     });
 
-    // Sao băng
     const shootingStars = [];
     function createShootingStar(){
       const points = []; for(let i=0;i<200;i++) points.push(new THREE.Vector3());
@@ -159,31 +163,26 @@
     }
     setInterval(()=>{ if(Math.random()<0.85) createShootingStar(); }, 3000);
 
-    // ============== MỞ THIỆP ==============
+    // === MỞ VÀ ĐÓNG THIỆP ===
     function openCard(){
       triggered = true;
       document.getElementById('flash').style.opacity = 1;
       setTimeout(() => {
         document.getElementById('flash').style.opacity = 0;
-        renderer.domElement.style.transition = 'opacity 1.5s';
         renderer.domElement.style.opacity = 0;
         document.getElementById('card').classList.add('show');
       }, 2800);
     }
-
-    // ============== QUAY LẠI VŨ TRỤ ==============
     function backToUniverse(){
       document.getElementById('flash').style.opacity = 1;
       document.getElementById('card').classList.remove('show');
       setTimeout(() => {
         document.getElementById('flash').style.opacity = 0;
-        renderer.domElement.style.transition = 'opacity 1.5s';
         renderer.domElement.style.opacity = 1;
-        triggered = false;  // cho phép bấm Trái Đất lại
+        triggered = false;
       }, 2800);
     }
 
-    // Bấm vào Trái Đất
     function onPointer(event) {
       if (triggered || !earthMesh) return;
       const clientX = event.touches ? event.touches[0].clientX : event.clientX;
@@ -196,26 +195,20 @@
     }
     window.addEventListener('click', onPointer);
     window.addEventListener('touchstart', onPointer);
-
-    // Nút trở lại
     document.getElementById('backBtn').addEventListener('click', backToUniverse);
 
-    // ============== YOUTUBE SKIPCUT ==============
-    const ytInput = document.getElementById("ytInput");
-    const ytPlayer = document.getElementById("ytPlayer");
-    ytInput.addEventListener("change", () => {
-      let url = ytInput.value.trim();
-      if (!url) return;
+    // === YOUTUBE ===
+    document.getElementById("ytInput").addEventListener("change", () => {
+      const url = document.getElementById("ytInput").value.trim();
       const match = url.match(/(?:v=|\/embed\/|\/shorts\/|youtu\.be\/|watch\?v=)([a-zA-Z0-9_-]{11})/);
-      if (!match) return alert("Link YouTube không hợp lệ nha!");
-      ytPlayer.src = `https://skipcut.com/watch?v=${match[1]}`;
+      if (match) document.getElementById("ytPlayer").src = `https://skipcut.com/watch?v=${match[1]}`;
+      else if(url) alert("Link YouTube không hợp lệ nha!");
     });
 
-    // ============== ANIMATION LOOP ==============
+    // === ANIMATE ===
     function animate(){
       if(triggered) return;
       requestAnimationFrame(animate);
-
       trails.forEach(t => {
         t.orbit.rotation.y += (Math.PI*2)/(t.period*60);
         const pos = t.planet.getWorldPosition(new THREE.Vector3());
@@ -223,7 +216,6 @@
         if(t.positions.length > t.maxPoints*3) t.positions.splice(0,3);
         t.trail.geometry.setAttribute('position', new THREE.Float32BufferAttribute(t.positions,3));
       });
-
       for(let i=shootingStars.length-1; i>=0; i--){
         const s = shootingStars[i]; s.life++;
         const pos = s.obj.geometry.attributes.position.array;
@@ -234,12 +226,8 @@
         }
         s.obj.geometry.attributes.position.needsUpdate = true;
         s.obj.material.opacity = Math.max(0, 1 - s.life/s.maxLife);
-        if(s.life > s.maxLife){
-          scene.remove(s.obj); s.obj.geometry.dispose(); s.obj.material.dispose();
-          shootingStars.splice(i,1);
-        }
+        if(s.life > s.maxLife){ scene.remove(s.obj); shootingStars.splice(i,1); }
       }
-
       sun.rotation.y += 0.006;
       nebulaGroup.children.forEach((n,i)=>{ n.material.uniforms.time.value=performance.now()*0.001; n.rotation.y+=0.00004*(i+1); });
       controls.update();
