--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Chill and Ytb</title>
   <style>
-    body { margin:0; overflow:hidden; background:#000; touch-action:none; }
-    #info { position:absolute; top:10px; left:10px; color:#fff; padding:10px 15px;
+    body { margin:0; overflow:hidden; background:#000; }
+    canvas { position:fixed; top:0; left:0; z-index:1; }
+    #info { position:fixed; top:10px; left:10px; color:#fff; padding:10px 15px;
             background:rgba(0,0,0,0.7); border-radius:8px; font-family:Arial;
             pointer-events:none; z-index:100; font-size:14px; }
     #flash { position:fixed; top:0; left:0; width:100%; height:100%; background:#fff; opacity:0;
@@ -18,32 +19,19 @@
       color:#fff; text-align:center; font-family:'Segoe UI',Arial,sans-serif;
       border-radius:25px; box-shadow:0 0 80px rgba(0,255,255,0.6);
       border:4px solid rgba(0,255,255,0.7); z-index:9999; opacity:0;
-      transition:all 1.8s cubic-bezier(0.25,0.8,0.25,1);
-      overflow-y:auto; max-height:95vh;
+      transition:all 1.8s cubic-bezier(0.25,0.8,0.25,1); overflow-y:auto; max-height:95vh;
     }
     #card.show { transform:translate(-50%,-50%) scale(1); opacity:1; }
     #card h1 { font-size:42px; margin:0 0 20px;
                background:linear-gradient(90deg,#00ffff,#ff00ff);
                -webkit-background-clip:text; color:transparent; }
-    #card p { font-size:20px; line-height:1.6; margin:15px 0; }
-
-    /* NÚT SIÊU ĐẸP – CHẮC CHẮN THẤY NGAY */
     #backBtn {
-      margin: 50px auto 20px;
-      padding: 16px 40px;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      background: linear-gradient(45deg, #ff00ff, #00ffff);
-      color: #000;
-      border: none;
-      border-radius: 50px;
-      box-shadow: 0 0 30px rgba(0,255,255,0.9);
-      transition: all 0.3s;
-      display: block;
+      margin:50px auto 20px; padding:16px 45px; font-size:21px; font-weight:bold;
+      background:linear-gradient(45deg,#ff00ff,#00ffff); color:#000;
+      border:none; border-radius:50px; box-shadow:0 0 30px rgba(0,255,255,0.9);
+      cursor:pointer; transition:0.3s; display:block;
     }
-    #backBtn:hover { transform: scale(1.15); box-shadow: 0 0 40px rgba(0,255,255,1); }
-
+    #backBtn:hover { transform:scale(1.15); }
     #youtubeSection { margin-top:40px; }
     #youtubeSection h2 { font-size:28px; margin:20px 0 10px; color:#ff79c6; }
     #ytInput { width:100%; padding:16px; font-size:18px; border:none; border-radius:12px;
@@ -56,10 +44,9 @@
   <div id="info">Chạm hoặc bấm vào Trái Đất để mở thiệp bí mật!</div>
   <div id="flash"></div>
 
-  <!-- THIỆP ĐẸP + NÚT HIỆN RÕ -->
   <div id="card">
     <h1>Chill Cùng Anh Nhé</h1>
-    <p>Chỉ cần dán link YouTube là xem mượt, không quảng cáo, có tiếng, fullscreen ngon lành luôn!</p>
+    <p>Dán link YouTube là xem mượt, không quảng cáo luôn!</p>
 
     <div id="youtubeSection">
       <h2>YouTube Không Quảng Cáo</h2>
@@ -67,12 +54,9 @@
       <iframe id="ytPlayer" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; web-share"></iframe>
       <p class="note">Không quảng cáo • Có tiếng • Shorts & Live OK • Dùng mãi mãi</p>
     </div>
-
-    <!-- NÚT NÀY BẠN SẼ THẤY NGAY -->
     <button id="backBtn">Quay lại vũ trụ</button>
   </div>
 
-  <!-- THREE.JS + TOÀN BỘ 3D VŨ TRỤ + SAO BĂNG (giữ nguyên như cũ) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 
@@ -83,25 +67,29 @@
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
+
     const controls = new THREE.OrbitControls(camera, renderer.domElement);
     controls.enableDamping = true; controls.dampingFactor = 0.05; controls.enablePan = false;
     camera.position.set(0, 600, 1800);
 
     let earthMesh = null;
-    let triggered = false;
+    let inCard = false;
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
 
-    // === TOÀN BỘ 3D (stars, nebula, sun, planets, moon, trails, sao băng) – giữ nguyên 100% ===
+    // Stars
     const starGeo = new THREE.BufferGeometry();
-    const vertices = []; for(let i=0;i<40000;i++) vertices.push(THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000));
+    const vertices = [];
+    for(let i=0;i<40000;i++) vertices.push(THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000),THREE.MathUtils.randFloatSpread(10000));
     starGeo.setAttribute('position', new THREE.Float32BufferAttribute(vertices,3));
     scene.add(new THREE.Points(starGeo, new THREE.PointsMaterial({color:0xffffff,size:1.6,sizeAttenuation:true,transparent:true,opacity:0.9})));
 
+    // Nebula
     const nebulaGroup = new THREE.Group(); scene.add(nebulaGroup);
     for(let l=0;l<3;l++){
       const size = 2500 + l*1000;
-      const mat = new THREE.ShaderMaterial({uniforms:{time:{value:0},layer:{value:l}},
+      const mat = new THREE.ShaderMaterial({
+        uniforms:{time:{value:0},layer:{value:l}},
         vertexShader:`varying vec3 vPos;void main(){vPos=position;gl_Position=projectionMatrix*modelViewMatrix*vec4(position,1.0);}`,
         fragmentShader:`uniform float time;uniform float layer;varying vec3 vPos;
           float hash(vec3 p){return fract(sin(dot(p,vec3(7,157,113)))*43758.5453);}
@@ -122,10 +110,12 @@
       nebulaGroup.add(m);
     }
 
+    // Sun
     const sun = new THREE.Mesh(new THREE.SphereGeometry(70,64,64), new THREE.MeshBasicMaterial({color:0xffee88}));
     sun.add(new THREE.Mesh(new THREE.SphereGeometry(110,32,32), new THREE.MeshBasicMaterial({color:0xffaa00,transparent:true,opacity:0.6})));
     scene.add(sun); sun.add(new THREE.PointLight(0xffffff,3,6000));
 
+    // Planets + Trails + Moon
     const planetData = [{name:"Mercury",r:12,dist:180,color:0xcccccc,period:4},{name:"Venus",r:18,dist:280,color:0xffe4b5,period:8},
       {name:"Earth",r:20,dist:400,color:0x2288ff,period:12},{name:"Mars",r:14,dist:550,color:0xff4444,period:18},
       {name:"Jupiter",r:55,dist:900,color:0xf4a460,period:25},{name:"Saturn",r:48,dist:1300,color:0xd2b48c,period:28},
@@ -152,6 +142,7 @@
       }
     });
 
+    // Shooting Stars
     const shootingStars = [];
     function createShootingStar(){
       const points = []; for(let i=0;i<200;i++) points.push(new THREE.Vector3());
@@ -163,52 +154,54 @@
     }
     setInterval(()=>{ if(Math.random()<0.85) createShootingStar(); }, 3000);
 
-    // === MỞ VÀ ĐÓNG THIỆP ===
+    // MỞ & ĐÓNG THIỆP
     function openCard(){
-      triggered = true;
+      inCard = true;
       document.getElementById('flash').style.opacity = 1;
-      setTimeout(() => {
+      setTimeout(()=>{
         document.getElementById('flash').style.opacity = 0;
-        renderer.domElement.style.opacity = 0;
+        renderer.domElement.style.display = 'none';
         document.getElementById('card').classList.add('show');
       }, 2800);
     }
     function backToUniverse(){
       document.getElementById('flash').style.opacity = 1;
       document.getElementById('card').classList.remove('show');
-      setTimeout(() => {
+      setTimeout(()=>{
         document.getElementById('flash').style.opacity = 0;
-        renderer.domElement.style.opacity = 1;
-        triggered = false;
+        renderer.domElement.style.display = 'block';
+        inCard = false;
+        controls.update();
+        animate();
       }, 2800);
     }
 
-    function onPointer(event) {
-      if (triggered || !earthMesh) return;
-      const clientX = event.touches ? event.touches[0].clientX : event.clientX;
-      const clientY = event.touches ? event.touches[0].clientY : event.clientY;
-      mouse.x = (clientX / innerWidth) * 2 - 1;
-      mouse.y = -(clientY / innerHeight) * 2 + 1;
+    // Bấm Trái Đất
+    function onPointer(e){
+      if(inCard || !earthMesh) return;
+      const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+      const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+      mouse.x = (clientX / innerWidth)*2 - 1;
+      mouse.y = -(clientY / innerHeight)*2 + 1;
       raycaster.setFromCamera(mouse, camera);
-      const hits = raycaster.intersectObject(earthMesh, true);
-      if (hits.length > 0) openCard();
+      if(raycaster.intersectObject(earthMesh, true).length > 0) openCard();
     }
     window.addEventListener('click', onPointer);
     window.addEventListener('touchstart', onPointer);
-    document.getElementById('backBtn').addEventListener('click', backToUniverse);
+    document.getElementById('backBtn').onclick = backToUniverse;
 
-    // === YOUTUBE ===
+    // YouTube SkipCut
     document.getElementById("ytInput").addEventListener("change", () => {
       const url = document.getElementById("ytInput").value.trim();
       const match = url.match(/(?:v=|\/embed\/|\/shorts\/|youtu\.be\/|watch\?v=)([a-zA-Z0-9_-]{11})/);
-      if (match) document.getElementById("ytPlayer").src = `https://skipcut.com/watch?v=${match[1]}`;
-      else if(url) alert("Link YouTube không hợp lệ nha!");
+      if(match) document.getElementById("ytPlayer").src = `https://skipcut.com/watch?v=${match[1]}`;
     });
 
-    // === ANIMATE ===
+    // ANIMATION LOOP
     function animate(){
-      if(triggered) return;
+      if(inCard) return;
       requestAnimationFrame(animate);
+
       trails.forEach(t => {
         t.orbit.rotation.y += (Math.PI*2)/(t.period*60);
         const pos = t.planet.getWorldPosition(new THREE.Vector3());
@@ -216,6 +209,7 @@
         if(t.positions.length > t.maxPoints*3) t.positions.splice(0,3);
         t.trail.geometry.setAttribute('position', new THREE.Float32BufferAttribute(t.positions,3));
       });
+
       for(let i=shootingStars.length-1; i>=0; i--){
         const s = shootingStars[i]; s.life++;
         const pos = s.obj.geometry.attributes.position.array;
@@ -226,16 +220,27 @@
         }
         s.obj.geometry.attributes.position.needsUpdate = true;
         s.obj.material.opacity = Math.max(0, 1 - s.life/s.maxLife);
-        if(s.life > s.maxLife){ scene.remove(s.obj); shootingStars.splice(i,1); }
+        if(s.life > s.maxLife){
+          scene.remove(s.obj); s.obj.geometry.dispose(); s.obj.material.dispose();
+          shooting040Stars.splice(i,1);
+        }
       }
+
       sun.rotation.y += 0.006;
-      nebulaGroup.children.forEach((n,i)=>{ n.material.uniforms.time.value=performance.now()*0.001; n.rotation.y+=0.00004*(i+1); });
+      nebulaGroup.children.forEach((n,i)=>{
+        n.material.uniforms.time.value = performance.now()*0.001;
+        n.rotation.y += 0.00004*(i+1);
+      });
       controls.update();
       renderer.render(scene, camera);
     }
     animate();
 
-    window.addEventListener('resize',()=>{ camera.aspect=innerWidth/innerHeight; camera.updateProjectionMatrix(); renderer.setSize(innerWidth,innerHeight); });
+    window.onresize = ()=>{
+      camera.aspect = innerWidth/innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(innerWidth, innerHeight);
+    };
   </script>
 </body>
 </html>
