--- a/index.html
+++ b/index.html
@@ -51,19 +51,18 @@
   </style>
 </head>
 <body>
-  <div id="info">Chạm/bấm vào Trái Đất để mở thiệp bí mật!</div>
   <div id="flash"></div>
 
   <div id="card">
-    <h1>Chill Cùng Anh Nhé</h1>
-    <p>Dán link YouTube → xem mượt, không quảng cáo!</p>
+    <h1>YTB AND CHILL>YTB 
+    <p>Dán link YouTube → xem</p>
     <div id="youtubeSection">
-      <h2>YouTube Không Quảng Cáo</h2>
+      <h2>YouTube</h2>
       <input type="text" id="ytInput" placeholder="Dán link YouTube rồi Enter...">
       <iframe id="ytPlayer" allowfullscreen allow="autoplay; fullscreen; picture-in-picture; web-share"></iframe>
-      <p class="note">Không quảng cáo • Có tiếng • Shorts & Live OK • Dùng mãi mãi</p>
+      <p class="note">...</p>
     </div>
-    <button id="backBtn">Quay lại vũ trụ</button>
+    <button id="backBtn">vũ trụ</button>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -311,3 +310,4 @@
   </script>
 </body>
 </html>
+
