--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
       transform:scale(1.08);
       box-shadow:0 0 30px rgba(0,255,255,0.8);
     }
+    #card h1 { font-size:42px; margin:0 0 20px;
+               background:linear-gradient(90deg,#00ffff,#ff00ff);
+               -webkit-background-clip:text; color:transparent; }
+    #rainbowText {
+      position:fixed; top:50%; left:50%; transform:translate(-50%,-50%) scale(0);
+      font-size:48px; font-weight:bold; font-family:'Segoe UI',Arial,sans-serif;
+      background:linear-gradient(90deg,#ff0000,#ff7f00,#ffff00,#00ff00,#0000ff,#4b0082,#9400d3);
+      background-size:200% 100%; -webkit-background-clip:text; color:transparent;
+      text-shadow:0 0 40px rgba(255,255,255,0.8); z-index:10000; opacity:0;
+      transition:all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55); pointer-events:none;
+      animation:rainbow 3s linear infinite;
+    }
+    #rainbowText.show { transform:translate(-50%,-50%) scale(1); opacity:1; }
+    @keyframes rainbow { 0%{background-position:0% 50%} 100%{background-position:200% 50%} }
     #backBtn {
       margin:50px auto 20px; padding:16px 45px; font-size:21px; font-weight:bold;
       background:linear-gradient(45deg,#ff00ff,#00ffff); color:#000;
@@ -310,4 +324,5 @@
   </script>
 </body>
 </html>
+
 
